Added template and fancy stuff

--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{.Title}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
+    <title>Harry potter API</title>
+    <meta name="title" content="Harry potter API">
+    <meta name="description" content="A simple library that you can use to get information about Harry potter.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://c2dd-14-207-160-65.ngrok.io/">
+    <meta property="og:title" content="Harry potter API">
+    <meta property="og:description" content="A simple library that you can use to get information about Harry potter.">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://c2dd-14-207-160-65.ngrok.io/">
+    <meta property="twitter:title" content="Harry potter API">
+    <meta property="twitter:description" content="A simple library that you can use to get information about Harry potter.">
+    <meta property="twitter:image" content="">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
+    <script defer src="fancy.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center">Harry Potter API</h1>
-    <p>A very cool api to get information on the harry potter novel series/movies</p>
+    <header>
+        <h1 align="center">Harry Potter API</h1>
+        <p>A very cool API to get information on the Harry potter novel series/movies.</p>
+    </header>
+    <main>
+        <section id="section0">
+            <h1>The API is pretty kool</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus rerum labore aliquid ipsum magnam nesciunt voluptate architecto velit modi eum provident eos quibusdam explicabo, beatae quasi suscipit consequatur fugit itaque.</p>
+        </section>
+        <section id="section1">
+            <h1>Why?</h1>
+            <p>Quaerat, dicta doloribus omnis. Eligendi, debitis non facere excepturi voluptates reprehenderit animi esse, doloremque reiciendis unde atque cum fugit, numquam aspernatur adipisci nostrum dolor temporibus labore consequatur nobis vero beatae?</p>
+        </section>
+        <section id="section2">
+            <h1>I have no idea about that. Ask yeff!</h1>
+            <p>Saepe unde consequuntur id, quod cumque quisquam sint quo ad officiis obcaecati officia harum excepturi tenetur fugit voluptatibus ipsa esse aperiam tempora praesentium consequatur voluptas sed numquam rerum. Quidem, nulla.</p>
+        </section>
+        <section id="section3">
+            <h1>Oh so you want to know why is the API kool?</h1>
+            <p>Debitis provident ab eos accusantium perspiciatis repellendus dolores fuga ratione repellat dignissimos ipsam optio, iusto aliquid esse porro! Alias quod vitae molestias cupiditate aperiam, vel accusamus culpa repellendus. Cupiditate, sed.</p>
+        </section>
+        <section id="section4">
+            <h1>because... it is kool!</h1>
+            <p>Earum ab, aperiam quibusdam deserunt molestias possimus distinctio ipsa hic necessitatibus, soluta. Rem totam, esse! A, fuga, ratione! Reprehenderit veniam earum ut reiciendis eius, libero quam aspernatur minus doloribus eveniet.</p>
+        </section>
+        <section id="section5">
+            <h1>Now I don't know what to insert in this section</h1>
+            <p>Blanditiis facilis officiis, fugiat vitae reiciendis quae nihil quo similique porro odio saepe suscipit architecto iste voluptate quaerat delectus, perferendis adipisci veritatis dolor exercitationem id voluptatum eaque! Accusantium ullam, doloremque!</p>
+        </section>
+    </main>
+    <footer>
+        Made with makefiles and confusion.
+    </footer>
 </body>
 </html>
