Updated html code, fixed possible type coercion

--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
     <script defer src="fancy.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -38,32 +38,33 @@
     </header>
     <main>
         <section id="section0">
-            <h1>The API is pretty kool</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus rerum labore aliquid ipsum magnam nesciunt voluptate architecto velit modi eum provident eos quibusdam explicabo, beatae quasi suscipit consequatur fugit itaque.</p>
+            <h1>What is it?</h1>
+            <p>
+                This is a API that provides endpoints for everything in the Harry Potter World. From the Hogwarts Houses to every spell, we've got it all!
+            </p>
         </section>
         <section id="section1">
             <h1>Why?</h1>
-            <p>Quaerat, dicta doloribus omnis. Eligendi, debitis non facere excepturi voluptates reprehenderit animi esse, doloremque reiciendis unde atque cum fugit, numquam aspernatur adipisci nostrum dolor temporibus labore consequatur nobis vero beatae?</p>
+            <p>
+                There are many API's for many popular movie/book series, but surprisingly, there isnt much out there for Harry Potter. Everything I found either
+                lacked a lot of information, or were abandoned. This api aims to fix that!
+            </p>
         </section>
         <section id="section2">
-            <h1>I have no idea about that. Ask yeff!</h1>
-            <p>Saepe unde consequuntur id, quod cumque quisquam sint quo ad officiis obcaecati officia harum excepturi tenetur fugit voluptatibus ipsa esse aperiam tempora praesentium consequatur voluptas sed numquam rerum. Quidem, nulla.</p>
+            <h1>Is it finished?</h1>
+            <p>
+                At the time of writing, no it is not. It is currently in development, and is being updated every day.
+            </p>
         </section>
         <section id="section3">
-            <h1>Oh so you want to know why is the API kool?</h1>
-            <p>Debitis provident ab eos accusantium perspiciatis repellendus dolores fuga ratione repellat dignissimos ipsam optio, iusto aliquid esse porro! Alias quod vitae molestias cupiditate aperiam, vel accusamus culpa repellendus. Cupiditate, sed.</p>
-        </section>
-        <section id="section4">
-            <h1>because... it is kool!</h1>
-            <p>Earum ab, aperiam quibusdam deserunt molestias possimus distinctio ipsa hic necessitatibus, soluta. Rem totam, esse! A, fuga, ratione! Reprehenderit veniam earum ut reiciendis eius, libero quam aspernatur minus doloribus eveniet.</p>
-        </section>
-        <section id="section5">
-            <h1>Now I don't know what to insert in this section</h1>
-            <p>Blanditiis facilis officiis, fugiat vitae reiciendis quae nihil quo similique porro odio saepe suscipit architecto iste voluptate quaerat delectus, perferendis adipisci veritatis dolor exercitationem id voluptatum eaque! Accusantium ullam, doloremque!</p>
+            <h1>Can I contribute?</h1>
+            <p>
+                Of course you can! Head over to https://github.com/YeffyCodeGit/PotterAPI, add your changes, open a pull request and we will review it!
+            </p>
         </section>
     </main>
     <footer>
-        Made with makefiles and confusion.
+        Made with Golang and love
     </footer>
 </body>
 </html>
