Changed the title tex to be centered through css

--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <header>
-        <h1 align="center">Harry Potter API</h1>
+        <h1 id="title">Harry Potter API</h1>
         <p>A very cool API to get information on the Harry potter novel series/movies.</p>
     </header>
     <main>
